# spark-pricing-agent

./: .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  spark.json  tsconfig.json
app/: config.py  main.py  pricing.py  zapier_client.py
snowflake/: create_pricing_guidance_procedure.sql
src/app/: layout.tsx  page.tsx  styles.css
src/app/api/diagnostics/mcp/: route.ts
src/app/api/diagnostics/runtime/: route.ts
src/app/api/health/: route.ts
src/app/api/price/: route.ts
src/app/api/price/callback/: route.ts
src/app/api/price/status/: route.ts
src/lib/pricing/: async-store.ts  mock-provider.ts  provider.ts  result-utils.ts  schema.ts  zapier-mcp-provider.ts  zapier-provider.ts
