[project]
name = "spark-pricing-agent"
version = "0.1.0"
description = "Spark pricing guidance app backed by Zapier MCP and Snowflake."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "mcp>=1.0.0",
  "pydantic>=2.7.0",
  "structlog>=25.0.0",
  "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
